# s25client

./: .gitignore  AGENTS.md  fl-copy-to-og35-ubuntulive.sh  start.sh
ai-battle-runs/: .gitignore  README.md
doc/: ai-dev-goals-v1.md  ai-placement-strategy-v1.md
extras/: CMakeLists.txt
extras/ai-battle/: HeadlessGame.cpp  HeadlessGame.h  llm_sidecar.py  main.cpp  run_llm_game.sh
extras/replay-player/: CMakeLists.txt  HeadlessReplay.cpp  HeadlessReplay.h  README.md  main.cpp
extras/replay-verify/: CMakeLists.txt  README.md  main.cpp
libs/common/include/helpers/: OptionalEnum.h
libs/s25main/: CMakeLists.txt  GameCommands.h  GameLobbyController.cpp  JoinPlayerInfo.cpp  Pathfinding.cpp  QuickStartGame.cpp
libs/s25main/ai/: AIInterface.cpp
libs/s25main/ai/aijh/: AIPlayerJH.cpp  AIPlayerJH.h  BuildingPlanner.cpp  BuildingPlanner.h
libs/s25main/ai/apex/: AIPlayerApex.cpp  AIPlayerApex.h
libs/s25main/ai/llm/: AIPlayerLlm.cpp  AIPlayerLlm.h  LlmStrategist.cpp  LlmStrategist.h  README.md  Strategist.cpp  Strategist.h  Strategy.h
libs/s25main/buildings/: nobMilitary.cpp
libs/s25main/factories/: AIFactory.cpp
libs/s25main/gameTypes/: AIInfo.h  GameTypesOutput.h
libs/s25main/ingameWindows/: iwSave.cpp
libs/s25main/network/: GameClient.cpp
libs/s25main/nodeObjs/: noShip.cpp
libs/s25main/world/: GameWorld.h  GameWorldBase.h  MapLoader.cpp  MapSerializer.cpp
tests/s25Main/integration/: testAttacking.cpp  testGameCommands.cpp
tools/ai-eval/: .gitignore  README.md  eval.py  run-game.sh
